--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </p>
   <p>
     We take a 4xi32 and want to resolve an integer bitmask of the MSBs.
-    This SSE instruction is simulated using a load, right shift, left shift, and horizontal vector addition in NEON.
+    This SSE instruction is simulated using a load, right shift, left shift, and horizontal vector addition in Neon.
   </p>
   <h4>Implementation</h4>
   <ul>
