--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
   <h4>Implementation</h4>
   <ul>
     <li>
-      <code><a href="https://developer.arm.com/architectures/instruction-sets/intrinsics/vld1q_s32">Vld1q_s32</a></code>
+      <code><a href="https://developer.arm.com/architectures/instruction-sets/intrinsics/vld1q_s32">vld1q_s32</a></code>
       is used to <i>load</i> multiple single-element structures to up to four registers to store shift values.
       We'll store the values {0, 1, 2, 3} to represent the positions of each of the MSBs.
     </li>
     <li>
-      We use <code><a href="https://developer.arm.com/architectures/instruction-sets/intrinsics/vshrq_n_u32">Vshrq_n_u32</a></code>
+      We use <code><a href="https://developer.arm.com/architectures/instruction-sets/intrinsics/vshrq_n_u32">vshrq_n_u32</a></code>
       to <i>right shift</i> each of the 4 floats by 31 bits to resolve the most significant bits. Let's say, for example, that these are {0, 1, 1, 0}.
     </li>
     <li>
-      <code><a href="https://developer.arm.com/architectures/instruction-sets/intrinsics/vshlq_u32">Vshlq_u32</a></code>
+      <code><a href="https://developer.arm.com/architectures/instruction-sets/intrinsics/vshlq_u32">vshlq_u32</a></code>
       is used to <i>left shift</i> every one of the MSBs we’ve got. We can apply our shift values we stored to shift every value by {0, 1, 2, 3} respectively.
       After shifting this should resolve {0, 10, 100, 0000}.
     </li>
     <li>
-      <code><a href="https://developer.arm.com/architectures/instruction-sets/intrinsics/vaddvq_u32">Vaddvq_u32</a></code>
+      <code><a href="https://developer.arm.com/architectures/instruction-sets/intrinsics/vaddvq_u32">vaddvq_u32</a></code>
        is used to <i>add</i> these values within the vector to resolve an integer.
        In our example that'd be 0+10+100+0000=0110.
     </li>
@@ -83,7 +83,7 @@
     <li>
       Simd-Everywhere, “simd-everywhere/simde”, GitHub.
       [Online]. Available: <br />
-      <a href="https://github.com/simd-everywhere/simde.">
+      <a href="https://github.com/simd-everywhere/simde">
         https://github.com/simd-everywhere/simde.
       </a><br />
       [Accessed: 17-Jun-2021].
@@ -91,7 +91,7 @@
     <li>
       Intrinsics – Arm Developer.
       [Online]. Available: <br />
-      <a href="https://developer.arm.com/architectures/instruction-sets/intrinsics.">
+      <a href="https://developer.arm.com/architectures/instruction-sets/intrinsics">
         https://developer.arm.com/architectures/instruction-sets/intrinsics.
       </a><br />
       [Accessed: 17-Jun-2021].
@@ -99,7 +99,7 @@
     <li>
       Intel® Intrinsics Guide.
       [Online]. Available: <br />
-      <a href="https://software.intel.com/sites/landingpage/IntrinsicsGuide.">
+      <a href="https://software.intel.com/sites/landingpage/IntrinsicsGuide">
         https://software.intel.com/sites/landingpage/IntrinsicsGuide.
       </a><br />
       [Accessed: 17-Jun-2021].
