--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <p>
     This project adds support for key Parabix operations such as transposition, long-stream addition and stream advance
     on the ARM architecture targeting the SIMD Neon instructions by reimplementing platform-specific x86 SSE instructions.
-    Our code will closely follow the format of <code>idisa_sse_builder</code> in order to implement these features.
+    Our code closely follows the format of <code>idisa_sse_builder</code> in order to implement these features.
   </p>
   <p>
-    Code-generation support is tested natively using a Raspberry Pi 2 Model B.
+    View the Parabix source code on <a href="https://cs-git-research.cs.surrey.sfu.ca/cameron/parabix-devel">GitLab</a>.
   </p>
   <h2>Example Translation for
     <code>
